[package]
name = "lau-agent-lifecycle"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-agent-lifecycle"
description = "Categorical agent lifecycle — sunset as colimit, spawning as pullback, conservation via adjunction, kintsugi repair"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
